feat: 옷 직접 등록 로직 구현 #59
