# src/routes/closet.js
@@ -1,7 +1,7 @@
 import express from "express";
 import asyncHandler from 'express-async-handler';
 import { LoginCheck } from "../middlewares/logincheck.js";
-import { myClosetPreview, myClothView } from "../domains/closet/closet.controller.js";
+import { myClosetPreview, myClothView, addCloth } from "../domains/closet/closet.controller.js";
 
 export const closetRouter = express.Router({mergeParams: true});
 
@@ -11,4 +11,5 @@ closetRouter.get('/main', LoginCheck, asyncHandler(myClosetPreview));
 //옷장-아이템 상세정보
 closetRouter.get('/:clothId', LoginCheck, asyncHandler(myClothView));
 
-//closetRouter.post('/closet/add', LoginCheck, asyncHandler(clothAdd));
+//옷장-직접 등록하기
+closetRouter.post('/', LoginCheck, asyncHandler(addCloth));
